--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										</ul>
 										<p>07511000000<br />
-										JLGTC@gmail.com<br />
+										LJTreeSurgery@gmail.com<br />
 									</section>
 
 							</div>
