--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -45,7 +45,7 @@
 									<h2>Contact</h2>
 
 									<p>Phone 07511000000</p>
-									<p>Email JLTGC@gmail.com</p>
+									<p>Email LJTreeSurgery@gmail.com</p>
 
 
 								</article>
