--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 											<header>
 												<h2>Grass Cutting</h2>
 											</header>
-											<p>We cut grass using Mowers and Strimmers, we also do brush/bramble clearance with brush cutters</p>
+											<p>Grass cutting using Mowers and Strimmers, we also do Brush/Bramble clearance with brush cutters</p>
 										</div>
 									</section>
 
@@ -164,7 +164,7 @@
 									<div id="content">
 										<section class="last">
 											<h2>About Us</h2>
-											<p>We are a small company, we are based in Somerset, but we also cover the Bristol and Bath area</a>
+											<p>We are a small company based in Somerset, but we also cover the Bristol and Bath area</a>
 											<p>We are all NPTC qualified Tree Surgeons with our own equiptment </a>
 										</section>
 									</div>
