--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 											<header>
 												<h2>Hedge Cutting</h2>
 											</header>
-											<p>We have a long reach hedge cutters and ladders for your tall hedges and tree shaping</p>
+											<p>We have long reach hedge cutters and ladders for your tall hedge and tree shaping</p>
 										</div>
 									</section>
 
