--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-							<a href="#" class="image featured"><img src="images/logo3.png" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/logo.png" alt="" /></a>
 							</div>
 						<!-- Nav -->
 							<nav id="nav">
@@ -44,7 +44,7 @@
 							</div>
 							<div class="col-5 col-12-medium">
 								<ul>
-									<li><a href="#" class="button alt large icon solid fa-question-circle"><a href="no-sidebar.html">Contact Us</a></li>
+									<li><a href="#" class="button alt large icon solid fa-question-circle">a href="no-sidebar.html">Contact Us</a></li>
 								</ul>
 							</div>
 						</div>
