--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							</div>
 							<div class="col-5 col-12-medium">
 								<ul>
-									<li><a href="#" class="button alt large icon solid fa-question-circle">a href="no-sidebar.html">Contact Us</a></li>
+									<li><a href="no-sidebar.html"><a href="#" class="button alt large icon solid fa-question-circle">Contact Us</a></li>
 								</ul>
 							</div>
 						</div>
