--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -20,14 +20,14 @@
 
 						<!-- Logo -->
 							<div id="logo">
-							<a href="#" class="image featured"><img src="images/logo2.png" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/logo.png" alt="" /></a>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
 									<li><a href="index.html">Welcome</a></li>
-									<li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
+									<li class="current"><a href="no-sidebar.html">Contact</a></li>
 								</ul>
 							</nav>
 
