--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 											<header>
 												<h2>Tree Surgery</h2>
 											</header>
-											<p>We do a wide range of Tree Surgery, Crown Reductions, Crown Raising, Thinning, Dismanting, Felling and Deadwooding</p>
+											<p>We do a wide range of Tree Surgery, Crown Reductions, Crown Raising, Thinning, Dismantling, Felling and Deadwooding</p>
 										</div>
 									</section>
 
