--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>Coming Soon</h2>
+												<h2>Branch/Log Removal</h2>
 											</header>
-											<p>...</p>
+											<p>We have a chipper, so if you have a pile of Branches/Logs that you need chipped and removed, we can help.</p>
 										</div>
 									</section>
 
@@ -140,7 +140,7 @@
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>Coming Soon</h2>
+												<h2>Coming soon</h2>
 											</header>
 											<p>...</p>
 										</div>
