--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 									<div id="content">
 										<section class="last">
 											<h2>About Us</h2>
-											<p>We are a small company based in Somerset, but we also cover the Bristol and Bath area</a>
+											<p>We are a small company based in the Mendips, also covering Bristol and Bath</a>
 											<p>We are all NPTC qualified Tree Surgeons with our own equiptment </a>
 										</section>
 									</div>
